--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Pages/Identity/SignInPage.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Pages/Identity/SignInPage.razor.scss
@@ -6,25 +6,13 @@
     height: 100%;
     display: flex;
     align-items: center;
+    padding: 0 rem2(16px);
     justify-content: center;
     flex-flow: column nowrap;
-    padding: rem2(56px) rem2(16px);
-
-    @include lg {
-        padding: rem2(48px) rem2(16px);
-    }
-
-    @include sm {
-        padding: rem2(40px) rem2(16px);
-    }
 }
 
 .form-forgot-password {
     font-size: rem2(14px);
     line-height: rem2(24px);
     margin-bottom: rem2(20px);
-
-    @include lt-xl {
-        margin-bottom: rem2(16px);
-    }
 }
