--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Pages/Identity/SignUpPage.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Pages/Identity/SignUpPage.razor.scss
@@ -6,17 +6,9 @@
     height: 100%;
     display: flex;
     align-items: center;
+    padding: 0 rem2(16px);
     justify-content: center;
     flex-flow: column nowrap;
-    padding: rem2(56px) rem2(16px);
-
-    @include lg {
-        padding: rem2(48px) rem2(16px);
-    }
-
-    @include sm {
-        padding: rem2(40px) rem2(16px);
-    }
 }
 
 .form-description {
@@ -24,28 +16,4 @@
     line-height: 1.5;
     font-size: rem2(14px);
     max-width: rem2(432px);
-}
-
-::deep {
-    .form-checkbox {
-        width: 100%;
-        max-width: rem2(340px);
-
-        .label {
-            text-align: start;
-            align-items: start;
-        }
-
-        @include lt-xl {
-            max-width: rem2(300px);
-        }
-
-        @include sm {
-            max-width: 100%;
-        }
-    }
-
-    .form-input-container--no-margin {
-        margin-bottom: 0;
-    }
 }
