--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Styles/abstracts/_media-queries.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Styles/abstracts/_media-queries.scss
@@ -6,13 +6,13 @@
 $screen-xl-min: rem2(1441px);
 $screen-xl-max: rem2(5000px);
 
-$screen-lg-min: rem2(835px);
-$screen-lg-max: rem2(1440px);
+$screen-lg-min: rem2(1201px);
+$screen-lg-max: rem2(1920px);
 
-$screen-md-min: rem2(361px);
-$screen-md-max: rem2(834px);
+$screen-md-min: rem2(769px);
+$screen-md-max: rem2(1200px);
 
-$screen-sm-max: rem2(360px);
+$screen-sm-max: rem2(768px);
 
 // media devices
 @mixin sm {
